# dither

./: LICENSE  README.md  dither.cabal
examples/: BWBalls.pbm  BWBalls.ppm  Balls.ppm
src/: #FloydSteinberg.hs#  .#FloydSteinberg.hs  Main.hs  Main.hs~  OrderedDither.hs  OrderedDither.hs~  ParsePPM.hs  ParsePPM.hs~
