name:                dither
version:             0.1.0.0
synopsis:            An implementation of ordered dithering
description:         Please see README.md
homepage:            https://github.com/nlj/dither#readme
license:             BSD3
license-file:        LICENSE
author:              Nicholas Liskij
maintainer:          example@example.com
copyright:           2016 Nicholas Liskij
category:            Graphics
build-type:          Simple
cabal-version:       >=1.10

executable dither
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  other-modules:       OrderedDither, ParsePPM
  build-depends:       base >= 4.7 && < 5,
                       text,
                       parsec,
                       split,
                       bytestring
